# PiRPC

./: CMakeLists.txt  README.md
client/: Client.cpp
client/private/: Client.cpp
client/public/: Client.h
common/public/: Config.h  Heartbeat.h  MessageDispatcher.h  MessageProcessor.h  MsgGen.h  MsgPretreater.h  PiRPCCallbacks.h  Snowflak.h  Stream2Package.h
evpp/: CMakeLists.txt
evpp/lib/macos/: libevpp.dylib
evpp/libevent/lib/pi/: libevent-2.1.so.7.0.1
include/: Client.h  Server.h
include/commom/: MessageDispatcher.h  MessageProcessor.h  MsgGen.h  PiRPCCallbacks.h  Snowflake.h
include/evpp/: tcp_server.h
lib/macos/: libPiRPC.dylib
server/: Server.cpp
server/private/: Server.cpp
server/public/: Server.h
